[build-system]
build-backend = "mesonpy"
requires = ["meson-python", "cython", "numpy", "wheel"]

[project]
name = "pymt_heatf"
description = "PyMT plugin for the HeatModelF model"
version = "3.2.dev0"
readme = "README.md"
authors = [
  {email = "mark.piper@colorado.edu"},
  {name = "Mark Piper"}
]
keywords = [
  "bmi",
  "csdms",
  "fortran",
  "model",
  "pymt",
]
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Cython",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.11"
dependencies = [
  "bmipy",
  "numpy",
]

[project.optional-dependencies]
dev = [
  "meson",
  "meson-python",
  "ninja",
  "cython",
  "make",
]
lint = [
  "black",
  "ruff",
  "isort",
]
build = [
  "build",
  "twine",
  "zest.releaser"
]

[project.urls]
homepage = "https://github.com/csdms"
documentation = "https://github.com/csdms"
repository = "https://github.com/mdpiper/pymt_heatf"
changelog = "https://github.com/mdpiper/pymt_heatf/blob/main/CHANGES.rst"

[project.entry-points."pymt.plugins"]
HeatModelF = "pymt_heatf._bmi:HeatModelF"

[tool.ruff]
exclude = ["docs"]
line-length = 88
ignore = [
	"E203",
	"E501",
]

[tool.zest-releaser]
tag-format = "v{version}"
